# NAI_SEM5

./: CMakeLists.txt  README.md  clion-opencv.bat
lab1/: main.cpp
lab2/: lab2.cpp
lab3/: lab3.cpp
lab4/: lab4.cpp
lab5/: lab5.cpp
lab7/: lab7.cpp  lab7.h
lab7dodatkowe_py/: main.py
